--- a/backend/package.json
+++ b/backend/package.json
@@ -20,6 +20,7 @@
     "crypto-js": "^4.2.0",
     "dotenv": "^16.4.7",
     "express": "^4.21.2",
+    "jsrsasign": "^11.1.0",
     "mongoose": "^8.9.5",
     "mysql2": "^3.12.0",
     "node-rsa": "^1.1.1",
